--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/elements": "^16.2.12",
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "rete-angular-plugin": "^2.1.1",
+    "rete-connection-plugin": "^2.0.1",
+    "rete-context-menu-plugin": "^2.0.2",
+    "rete-dock-plugin": "^2.0.1",
+    "rete-render-utils": "^2.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
