--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "rete": "2.0.1",
     "rete-angular-plugin": "^2.1.1",
     "rete-connection-plugin": "^2.0.1",
     "rete-context-menu-plugin": "^2.0.2",
